Fix overflow of ContactComponent

--- a/src/app/main/contacts/contacts.component.css
+++ b/src/app/main/contacts/contacts.component.css
@@ -1,5 +1,5 @@
 .fill-window {
-  height: 100vh;
   min-height: 500px;
-  height: auto;
+  height: 100vh;
+  overflow: scroll;
 }
