--- a/src/app/main/container/chat/chat.component.css
+++ b/src/app/main/container/chat/chat.component.css
@@ -1,7 +1,7 @@
 /* Chat containers */
 .content {
   min-height: 500px;
-  height: 80vh;
+  height: 100vh;
   overflow: scroll;
 }
 
