--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -1,5 +1,4 @@
 .fill-window {
-    height: 100vh;
     min-height: 500px;
-    height: auto;
+    height: 100vh;
 }
